# Portafolio

./: README.md
Python/Clima-colombia/: README.md  conftest.py  main.py  pyproject.toml
Python/Clima-colombia/src/domain/: entities.py  repositories.py
Python/Clima-colombia/src/infrastructure/: geocoding_city_repository.py  open_meteo_client.py
Python/Clima-colombia/src/interface/: cli.py  dashboard.py
Python/Clima-colombia/tests/domain/: test_entities.py
Python/Clima-colombia/tests/infrastructure/: test_geocoding_city_repository.py  test_open_meteo_client.py
Python/Clima-colombia/tests/interface/: test_cli.py
Python/Recibo-restaurante/: .coverage  README.md  main.py  pyproject.toml  recibo.txt
Python/Recibo-restaurante/controllers/: __init__.py  controlador_calculadora.py  controlador_facturacion.py
Python/Recibo-restaurante/data/: __init__.py  productos.py
Python/Recibo-restaurante/domain/: __init__.py  calculadora.py  facturacion.py  recibo.py
Python/Recibo-restaurante/infrastructure/: __init__.py  almacenamiento.py
Python/Recibo-restaurante/tests/: __init__.py  test_almacenamiento.py  test_calculadora.py  test_facturacion.py  test_recibo.py
Python/Recibo-restaurante/ui/: __init__.py  panel_botones.py  panel_calculadora.py  panel_costos.py  panel_productos.py  panel_recibo.py  ventana_principal.py
Python/Virtual-assistant/: README.md  main.py  pyproject.toml
Python/Virtual-assistant/src/controllers/: asistente_controller.py
Python/Virtual-assistant/src/infrastructure/: google_speech_recognizer.py  pyjokes_joke_provider.py  pyttsx3_speech_synthesizer.py  pywhatkit_video_player.py  pywhatkit_web_searcher.py  webbrowser_web_launcher.py  wikipedia_knowledge_source.py  yahoo_ticker_resolver.py  yfinance_stock_price_provider.py
Python/Virtual-assistant/tests/application/: test_abrir_pagina_web.py  test_buscar_en_internet.py  test_buscar_en_wikipedia.py  test_consultar_precio_accion.py  test_contar_chiste.py  test_despedirse.py  test_informar_dia_semana.py  test_informar_hora.py  (+2 more)
Python/Web-scraper/: README.md  main.py  pyproject.toml
Python/Web-scraper/application/: __init__.py  interfaces.py  use_cases.py
Python/Web-scraper/domain/: __init__.py  entities.py
Python/Web-scraper/infrastructure/: __init__.py  repository.py  scraper.py
Python/Web-scraper/output/: quotes.csv
Python/Web-scraper/tests/: test_scraper.py
React/Recibo-Restaurante-Web/Backend/: pyproject.toml  recibo_restaurante.db
(+112 files in other folders)
